RESOLVED FIXED219776
[GTK][WPE] Async overflow scrolling is disabled by default due to brokenness
https://bugs.webkit.org/show_bug.cgi?id=219776
Summary [GTK][WPE] Async overflow scrolling is disabled by default due to brokenness
Chris Lord
Reported 2020-12-11 03:37:18 PST
Sorry for the slightly vague title - Currently, AsyncOverflowScrollingEnabled is disabled in WebPreferencesInternal for Nicosia because enabling it results in broken rendering on scrolled overflow scrolling layers and their descendents. This is obviously less than ideal, scrolling is often not done on the root frame and disabling async overflow scrolling causes us to fall back to both main-thread scrolling and results in more painting and worse-feeling scrolling. The bug appears to be boundsOrigin on layers not being respected correctly. We should fix this and enable this setting - I have a patch that fixes at least the most obvious issues. I'm not certain it's a complete fix, but we need wider testing to identify further issues. In the future, it'd probably be ideal for there to be more shared code here between Mac and Linux, where Mac has a complete and likely more bug-free implementation. I think it'd be good to do some consolidation/refactoring and renaming in this code path - though this patch is quite small, it took a long time to figure out.
Attachments
Patch (6.05 KB, patch)
2020-12-11 03:42 PST, Chris Lord
no flags
Patch (6.01 KB, patch)
2020-12-11 09:13 PST, Chris Lord
no flags
Chris Lord
Comment 1 2020-12-11 03:42:51 PST
Chris Lord
Comment 2 2020-12-11 07:04:10 PST
*** Bug 203412 has been marked as a duplicate of this bug. ***
Chris Lord
Comment 3 2020-12-11 09:13:24 PST
EWS
Comment 4 2020-12-11 09:50:35 PST
Committed r270683: <https://trac.webkit.org/changeset/270683> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416000 [details].
Radar WebKit Bug Importer
Comment 5 2020-12-11 09:51:16 PST
Note You need to log in before you can comment on or make changes to this bug.