[GTK][WPE] Async overflow scrolling is disabled by default due to brokenness https://bugs.webkit.org/show_bug.cgi?id=219776

Reviewed by Žan Doberšek.

Source/WebCore:

Make sure to respect GraphicsLayer::boundsOrigin when calculating
transforms, coverage and clipping in CoordinatedGraphicsLayer. Also,
when scrolling overflow areas, change the boundsOrigin on the
container layer and not the contents area, to match behaviour on Mac.

* page/scrolling/nicosia/ScrollingTreeOverflowScrollingNodeNicosia.cpp:
(WebCore::ScrollingTreeOverflowScrollingNodeNicosia::repositionScrollingLayers):
* platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::paintSelfAndChildren):
* platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:
(WebCore::CoordinatedGraphicsLayer::flushCompositingStateForThisLayerOnly):
(WebCore::CoordinatedGraphicsLayer::computeTransformedVisibleRect):

Source/WTF:

Enable async overflow scrolling with Nicosia.

* Scripts/Preferences/WebPreferencesInternal.yaml:


Canonical link: https://commits.webkit.org/232346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270683 268f45cc-cd09-0410-ab3c-d52691b4dbfc